Finalizando ideia da inspeção

--- a/equipamentos/templates/inspecao_computador.html
+++ b/equipamentos/templates/inspecao_computador.html
@@ -29,7 +29,7 @@
 
         <div class="form-group">
             <label for="computador">Computador</label>
-            <select class="form-control" id="computador" name="computador" required>
+            <select class="form-control" id="computador" name="computador" disabled>
                     <option value="{{ computador.id }}">{{ computador.nome_rede }} - {{ computador.operador }}</option>
             </select>
         </div>
