--- a/templates/partials/barra_navegacao.html
+++ b/templates/partials/barra_navegacao.html
@@ -59,6 +59,9 @@
           Ocorrências
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink5">
+
+          <a class="dropdown-item" href="{% url 'listar_sla_interno' %}">SLA</a>         
+          <div class="dropdown-divider"></div>           
           <a class="dropdown-item" href="{% url 'ocorrencias_operadores' %}">Operadores</a>
           <div class="dropdown-divider"></div>
           <a class="dropdown-item" href="{% url 'ocorrencias_equipamentos' %}">Equipamentos</a>
